--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "vue-router": "^4.5.0"
