--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
