--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-click-outside": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
